    "textured video"). Port number takes precedence; the plugins will fall
    back on another port of the same type (if a type was specified) then on
    whatever they can find.
    XvMC does not support port selection at present.
  * Report more video output capabilities via (port)->get_capabilities():
    colour controls, zooming, colour keying.

xine-lib (1.1.12) 2008-??-??
  * Fixed and improved the PulseAudio driver.
  * Fixed a regression in 1.1.11.1 which broke Quicktime container handling.
  * And another, this time in the Matroska demuxer.
  * Added a tool to assist with generating front ends' desktop files. It
    lists MIME types & filename extensions known to the installed xine-lib.
  * Various Real codec improvements, including:
    - RV20 no longer causes segfaults (observed on amd64);
    - Cook is now handled by ffmpeg.
  * Added a video output plugin intended for passing raw data to the front end.

xine-lib (1.1.11.1) 2008-03-30
  * Security fixes:
    - Integer overflows in FLV, Qt, Real, WC3Movie, Matroska and FILM
      demuxers, allowing remote attackers to trigger heap overflows and
      possibly execute arbitrary code. (CVE-2008-1482)
  * Added a few more memory allocation checks to the above demuxers.
  * WAV file playback fix: don't assume that the first chunk is "fmt ".
  * Don't try to play partial 24-bit AIFF frames (decoder would lose data).
  * Fixed AIFF comment chunk handling and sample rate reading.
  * LPCM fixes: input over-reading, conversion of 24-bit samples.

xine-lib (1.1.11) 2008-03-19
  * Security fixes:
    - Array Indexing Vulnerability in sdpplin_parse(). (CVE-2008-0073)
  * Reworked the plugin directory naming so that external plugins don't have
    to be rebuilt for every release. We now use a naming scheme based on the
    API/ABI versioning, checking older directories - with this release, the
    plugin directory name is 1.20, and if this gets bumped to 1.21 in a